feat: Зааершить верстку главной

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,66 @@
 .container {
-  width: 1440px;
+  width: clamp(320px, 100vw, 1440px);
   margin: 0 auto;
-  font-size: 16px;
+  font-size: clamp(14px, 2vw, 16px);
 }
 
 .header {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 1100px;
-  margin: 0 auto;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  width: clamp(320px, 76.38vw, 1100px);
+  margin: 0 auto;
   height: 75px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.link-logo {
+  text-decoration: none;
+  color: #56b280;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: filter 0.3s, transform 0.3s;
+}
+.link-logo:hover {
+  filter: saturate(2.5);
+  transform: scale(1.1);
+}
+.link-logo__text {
+  padding-left: 10px;
 }
 
 .logo {
-  transition: filter 0.3s, transform 0.3s;
-  width: 126px;
+  width: 34px;
   height: 34px;
   cursor: pointer;
-}
-.logo:hover {
-  filter: saturate(2.5);
-  transform: scale(1.1);
 }
 
 .menu {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
+}
+
+.menu-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
   padding: 0;
   gap: 75px;
 }
-.menu__item {
+.menu-list__item {
   cursor: pointer;
   color: #1d252c;
   font-family: "Roboto", sans-serif;
@@ -41,28 +68,123 @@
   font-weight: 500;
   line-height: normal;
 }
-.menu__link {
+.menu-list__link {
   transition: color 0.3s;
   color: #1d252c;
 }
-.menu__link:hover {
+.menu-list__link:hover {
   color: #56b280;
 }
-.menu__item_sub {
+.menu-list__item_sub {
   position: relative;
 }
-.menu__item_sub:hover .sub-menu {
+.menu-list__item_sub:hover .sub-menu {
   opacity: 1;
   transform: translateY(0);
 }
 
+.burger-checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+.burger-checkbox:checked + .burger::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+}
+.burger-checkbox:checked + .burger::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom 0.3s, transform 0.3s 0.15s;
+}
+
+.burger {
+  cursor: pointer;
+  display: none;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+  margin-left: 96px;
+}
+.burger::before, .burger::after {
+  content: "";
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3px;
+  border-radius: 10px;
+  background: #000;
+}
+.burger::before {
+  top: 0;
+  box-shadow: 0 11px 0 #000;
+  transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+}
+.burger::after {
+  bottom: 0;
+  transition: bottom 0.3s 0.15s, transform 0.3s;
+}
+
 .icon-list {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
   list-style-type: none;
   padding: 0;
   gap: 20px;
+}
+
+@media (max-width: 1000px) {
+  .icon-list {
+    position: absolute;
+    position: fixed;
+    top: 84%;
+    left: 45%;
+    display: none;
+    z-index: 5;
+  }
+  .burger {
+    display: block;
+  }
+  .menu-list {
+    display: none;
+  }
+  .menu-list__item {
+    padding: 8px;
+    font-size: 18px;
+  }
+  .menu-list__item:hover {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .burger-checkbox:checked ~ .menu-list {
+    margin: 0;
+    transform: translateX(0);
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 12px;
+    transition: 0.3s;
+    width: 100vw;
+    min-height: 100vh;
+    background: #e1e1e1;
+    z-index: 3;
+  }
+  .burger-checkbox:checked ~ .burger {
+    z-index: 4;
+  }
+  .burger-checkbox:checked ~ .icon-list {
+    display: flex;
+  }
+}
+.active {
+  display: flex;
 }
 
 .sub-menu {
@@ -73,9 +195,6 @@
   opacity: 0;
   transform: translateY(-20px);
   transition: opacity 0.3s, transform 0.3s, background-color 5s;
-  flex-direction: column;
-  width: 100%;
-  text-align: center;
   width: 100%;
   text-align: center;
   border-radius: 2px;
@@ -120,19 +239,23 @@
   background-position: center center;
   background-color: #56b280;
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 .greeting__bord {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border-radius: 2px;
   background: rgba(247, 248, 250, 0.8);
   backdrop-filter: blur(12px);
-  width: 730px;
-  height: 349px;
+  width: clamp(265px, 88vw, 730px);
+  height: clamp(270px, 55vw, 349px);
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .greeting__text {
   margin: 0 0 45px 0;
@@ -140,7 +263,7 @@
   text-align: center;
   color: #1d252c;
   font-family: "Raleway", sans-serif;
-  font-size: 18px;
+  font-size: clamp(16px, 2vw, 18px);
   font-style: normal;
   font-weight: 400;
 }
@@ -148,22 +271,24 @@
 .title {
   color: #1d252c;
   font-family: "Montserrat", sans-serif;
-  font-size: 40px;
+  font-size: clamp(28px, 5vw, 40px);
+  text-align: center;
   font-style: normal;
   font-weight: 500;
   margin: 0 0 10px 0;
 }
 
 .button {
+  text-align: center;
   border-radius: 4px;
   background-color: #56b280;
   display: block;
-  padding: 8px 44px;
+  padding: 8px clamp(12px, 2vw, 44px);
   color: #e1e1e1;
   text-decoration: none;
   transition: background-color 0.3s, color 0.3s, transform 0.3s;
   font-family: "Roboto", sans-serif;
-  font-size: 20px;
+  font-size: clamp(16px, 2vw, 20px);
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -176,19 +301,23 @@
 }
 
 .products {
-  width: 1100px;
+  width: clamp(320px, 76.38vw, 1100px);
   margin: 0 auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .subtitle {
   margin: 15px 0 0 0;
   color: #1d252c;
   font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+  text-align: center;
+  font-size: clamp(16px, 3vw, 18px);
   font-style: normal;
   font-weight: 500;
   letter-spacing: 0.1px;
@@ -196,10 +325,11 @@
 
 .cards {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  gap: 26px;
+  gap: 13px;
   list-style-type: none;
   padding: 0;
 }
@@ -238,7 +368,7 @@
   display: block;
   margin: 0;
   text-align: right;
-  color: var(--green, #56b280);
+  color: #56b280;
   text-align: right;
   font-family: "Roboto", sans-serif;
   font-size: 20px;
@@ -246,16 +376,19 @@
 }
 
 .detail {
-  width: 1100px;
+  width: clamp(320px, 76.38vw, 1100px);
   margin: 0 auto;
-  height: 800px;
+  min-height: 800px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .detail__title {
-  width: 350px;
+  max-width: 350px;
 }
 .detail__subtitle {
   color: #56b280;
@@ -268,12 +401,27 @@
   text-align: center;
 }
 .detail__image {
-  height: 350px;
-  width: 470px;
+  max-height: 350px;
+  max-width: 470px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
 }
 
+@media (max-width: 800px) {
+  .detail {
+    flex-direction: column;
+  }
+  .detail__wrapper-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .detail__subtitle {
+    text-align: center;
+  }
+}
 .list-detail {
   padding-left: 25px;
   list-style-type: none;
@@ -295,9 +443,12 @@
 }
 
 .reviews {
-  width: 1100px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: clamp(320px, 76.38vw, 1100px);
   margin: 0 auto;
-  height: 510px;
+  min-height: 510px;
 }
 .reviews__title {
   text-align: center;
@@ -305,13 +456,13 @@
 }
 .reviews__subtitle {
   text-align: center;
-  margin: 0 0 50px 0;
+  margin: 0 0 30px 0;
 }
 .reviews__text {
   color: #1d252c;
   font-family: "Montserrat", sans-serif;
   text-align: center;
-  font-size: 22px;
+  font-size: clamp(16px, 3vw, 22px);
   font-weight: 500;
   line-height: 28px;
   margin: 0 0 8px 0;
@@ -320,27 +471,27 @@
 .reviews__signature {
   color: #7c8087;
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: clamp(14px, 3vw, 18px);
   font-weight: 400;
   line-height: normal;
 }
 
 .feedbacks {
   margin: 0;
-  height: 322px;
+  min-height: 322px;
   padding-left: 0;
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  justify-content: space-between;
-  gap: 30px;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .feedbacks__item {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 350px;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
 }
 .feedbacks__avatar {
   width: 65px;
@@ -349,12 +500,14 @@
   object-fit: cover;
   object-position: center;
   margin-bottom: 14px;
+  margin-top: 20px;
 }
 
 .rating {
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  align-items: center;
   margin-bottom: 22px;
 }
 .rating__star {
@@ -374,28 +527,31 @@
 }
 
 .popular {
-  height: 450px;
+  min-height: 450px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .footer {
   background-color: #272727;
-  height: 383px;
+  min-height: 383px;
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 .footer__wrapper {
-  max-width: 1100px;
   margin: 0 auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   justify-content: space-between;
-  width: 1100px;
+  align-items: center;
+  width: clamp(320px, 76.38vw, 1100px);
   border-top: 2px solid white;
   padding-top: 60px;
 }
@@ -413,8 +569,9 @@
 }
 .footer__wrapper-nav {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
   gap: 35px;
 }
 .footer__nav-title {
@@ -454,4 +611,27 @@
   height: 64px;
   object-fit: cover;
   object-position: center;
+}
+
+@media (max-width: 920px) {
+  .footer__wrapper {
+    flex-direction: column;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+  .footer__wrapper-text {
+    bottom: 0;
+    padding-bottom: 30px;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .footer__wrapper-nav {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+  }
+  .footer__nav-title {
+    margin-bottom: 0;
+  }
 }/*# sourceMappingURL=styles.css.map */
